--- a/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
+++ b/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
@@ -9,7 +9,7 @@ Trotzdem gibt es einige Techniken, die den generierten Klang natürlicher wirken
 
 Bei der Synthese eines Tones mittels FM-Synthese müssen zunächst die Parameter der Formel für die FM-Synthese festgelegt werden. Hierzu kann das Frequenzspektrum und das Spektrogramm des nachzubildenden Tones verwendet werden. Eine ausführliche Erklärung der einzelnen Parameter ist in Kapitel \ref{einfacheFM} - \nameref{einfacheFM} zu finden. 
 
-Es liegt nahe, als Startpunkt für die Nachbildung die Grundfrequenz zu wählen, da sie die Tonhöhe des Klangs bestimmt. Sie ist im Spektrum die niedrigste Frequenz mit wahrnehmbarer Ausprägung und legt die Tonhöhe fest \cite[S. 53]{barkowsky}. Diese Frequenz kann als Trägerfrequenz $f_c$ verwendet werden. Der Abstand der einzelnen Frequenzen zueinander ist der zweite Anhaltspunkt. Dieser Abstand findet als Modulationsfrequenz $f_m$ Verwendung. Für harmonische Töne ist ein ganzzahliges Vielfaches der Grundfrequenz als Modulationsfrequenz nötig \cite[S. 528]{chowningPaper}. Der Modulationsindex $I$ kann mithilfe der Besselfunktionen gefunden werden - siehe hierzu \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Alternativ kann eine grobe Schätzung vorgenommen werden; hierzu ist die folgende Faustregel nützlich:
+Es liegt nahe, als Startpunkt für die Nachbildung die Grundfrequenz zu wählen, da sie die Tonhöhe des Klangs bestimmt. Sie ist im Spektrum die niedrigste Frequenz mit wahrnehmbarer Ausprägung \cite[S. 53]{barkowsky}. Diese Frequenz kann als Trägerfrequenz $f_c$ verwendet werden. Der Abstand der einzelnen Frequenzen zueinander ist der zweite Anhaltspunkt. Dieser Abstand findet als Modulationsfrequenz $f_m$ Verwendung. Für harmonische Töne ist ein ganzzahliges Vielfaches der Grundfrequenz als Modulationsfrequenz nötig \cite[S. 528]{chowningPaper}. Der Modulationsindex $I$ kann mithilfe der Besselfunktionen gefunden werden - siehe hierzu \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Alternativ kann eine grobe Schätzung vorgenommen werden; hierzu ist die folgende Faustregel nützlich:
 \begin{equation}
 \label{eq:faustformel}
 I + 1 = \text{Anzahl der Seitenfrequenzen mit signifikanter Ausprägung}
@@ -27,7 +27,7 @@ Eines der wichtigsten Grundbestandteile eines jeden Instrumententones ist die so
 \label{fig:adsrDefault}
 \end{figure}
 
-Da allerdings bei vielen Instrumenten die Lautstärke in den einzelnen Phasen der ADSR-Hüllkurve nicht gleichmäßig steigt oder sinkt, ist es nötig, beliebig komplexe Kurven abbilden zu können. Bei vielen Instrumenten steigt beispielsweise die Lautstärke in der Attack Phase exponentiell an und fällt in der Decay und Release Phase auch wieder exponentiell ab. Manche Synthesizer bieten zusätzlich auch noch eine Hold Phase vor der Attack Phase, für Instrumente, die einige Zeit benötigen, bis sie nach dem Anschlagen des Tones in die Attack Phase eintreten. In Abbildung \ref{fig:adsrTypical} wurden weitere, für verschiedene Instrumente typische Hüllkurven dargestellt. Diese verdeutlichen, dass die ADSR-Hüllkurve beliebig schlichte sowie komplexe Formen annehmen kann.
+Da allerdings bei vielen Instrumenten die Lautstärke in den einzelnen Phasen der ADSR-Hüllkurve nicht gleichmäßig steigt oder sinkt, ist es nötig, beliebig komplexe Kurven abbilden zu können. Bei vielen Instrumenten steigt beispielsweise die Lautstärke in der Attack-Phase exponentiell an und fällt in der Decay- und Release-Phase auch wieder exponentiell ab. Manche Synthesizer bieten zusätzlich auch noch eine Hold-Phase vor der Attack-Phase, für Instrumente, die einige Zeit benötigen, bis sie nach dem Anschlagen des Tones in die Attack-Phase eintreten. In Abbildung \ref{fig:adsrTypical} wurden weitere, für verschiedene Instrumente typische Hüllkurven dargestellt. Diese verdeutlichen, dass die ADSR-Hüllkurve beliebig schlichte sowie komplexe Formen annehmen kann.
 
 \begin{figure} [ht]
 \centering
@@ -66,7 +66,7 @@ Anhand des Spektrums können bereits einige Erkenntnisse für die FM-Synthese ge
 \label{fig:plotFMSyntheseI05}
 \end{figure}
 
-Ein erstes Spektrum der FM-Synthese mit den eben festgelegten Werten kann in Abbildung \ref{fig:plotFMSyntheseI05} begutachtet werden. Beim Evaluieren der Ergebnisse dieses Spektrums fällt auf, dass die erste Seitenfrequenz im Verhältnis zur Grundfrequenz einen viel stärkeren Ausschlag aufweist als es bei der Querflöte der Fall ist. Zudem fällt danach die Amplitude der 2. und 3. Seitenfrequenz viel stärker ab als bei dem Instrument. Untersucht man jetzt noch das Spektrogramm (ebenfalls in Abbildung \ref{fig:plotFMSyntheseI05}), fällt im Vergleich zum Spektrogramm der Querflöte die sehr viel geringere Anzahl an Seitenfrequenzen auf. Die Seitenfrequenzen bei 4000 Hz und darüber sind bei dem Instrument noch deutlich sichtbar während sie bei der FM-Synthese schon bei 4000 Hz kaum noch existent sind. Wird versucht, den Modulationsindex zur Steigerung der Anzahl an Seitenfrequenzen zu erhöhen, verlagert sich die Amplitude der Trägerfrequenz auf die Seitenfrequenzen. Somit werden die Seitenfrequenzen stärker und die Trägerfrequenz schwächer, dargestellt in Abbildung \ref{fig:spektrumFMSyntheseI2}. 
+Ein erstes Spektrum der FM-Synthese mit den eben festgelegten Werten kann in Abbildung \ref{fig:plotFMSyntheseI05} begutachtet werden. Beim Evaluieren der Ergebnisse dieses Spektrums fällt auf, dass die erste Seitenfrequenz im Verhältnis zur Grundfrequenz einen viel stärkeren Ausschlag aufweist als es bei der \textit{Querflöte} der Fall ist. Zudem fällt danach die Amplitude der 2. und 3. Seitenfrequenz viel stärker ab als bei dem Instrument. Untersucht man jetzt noch das Spektrogramm (ebenfalls in Abbildung \ref{fig:plotFMSyntheseI05}), fällt im Vergleich zum Spektrogramm der Querflöte die sehr viel geringere Anzahl an Seitenfrequenzen auf. Die Seitenfrequenzen bei 4000 Hz und darüber sind bei dem Instrument noch deutlich sichtbar während sie bei der FM-Synthese schon bei 4000 Hz kaum noch existent sind. Wird versucht, den Modulationsindex zur Steigerung der Anzahl an Seitenfrequenzen zu erhöhen, verlagert sich die Amplitude der Trägerfrequenz auf die Seitenfrequenzen. Somit werden die Seitenfrequenzen stärker und die Trägerfrequenz schwächer, dargestellt in Abbildung \ref{fig:spektrumFMSyntheseI2}. 
 
 \begin{figure} [ht]
 \centering
@@ -115,7 +115,7 @@ Nachdem Vibrato, variabler Modulationsindex und ADSR-Hüllkurve hinzugefügt wur
 
 Das gefilterte Rauschen wird anschließend noch mit einer ADSR-Hüllkurve veredelt. Dieser Schritt ist nötig, da während der Attack-Phase des Originaltons, wie im Spektrogramm in Abbildung \ref{fig:plotFluteOrig} zu sehen, das Rauschen durch das Anblasen des Instrumentes sehr scharf heraussticht. Zusätzlich kann noch ein sehr leises Rauschen der Feedback-FM-Synthese ohne Filter über das gesamte Frequenzspektrum gelegt werden, um auch in den höheren Frequenzen einen leichten Ausschlag im Spektrogramm kenntlich zu machen. 
 
-Trotz des verstärkten Rauschens zu Beginn des Tones fehlt noch das stark hörbare Anblasgeräusch. Beim Betrachten des Spektrums und des Spektrogramms fallen noch zwei recht starke Ausschläge zu Beginn des Signals auf. Ein Ausschlag befindet sich bei 904 Hz und der Zweite bei 1182 Hz. Beide Frequenzen können mit einem einfachen Sinus erzeugt und mit einer ADSR-Hüllkurve, die nur eine kurze Attack Phase aufweist und danach komplett abfällt, modelliert und zum Signal hinzugefügt werden. In Abbildung \ref{fig:plotFMSyntheseComplete} ist das Ergebnis der FM-Synthese mit den in diesem Kapitel besprochenen Veredelungen gezeigt. In den Plots sind die Ähnlichkeiten zum originalen Ton deutlich sichtbar.
+Trotz des verstärkten Rauschens zu Beginn des Tones fehlt noch das stark hörbare Anblasgeräusch. Beim Betrachten des Spektrums und des Spektrogramms fallen noch zwei recht starke Ausschläge zu Beginn des Signals auf. Ein Ausschlag befindet sich bei 904 Hz und der Zweite bei 1182 Hz. Beide Frequenzen können mit einem einfachen Sinus erzeugt und mit einer ADSR-Hüllkurve, die nur eine kurze Attack-Phase aufweist und danach komplett abfällt, modelliert und zum Signal hinzugefügt werden. In Abbildung \ref{fig:plotFMSyntheseComplete} ist das Ergebnis der FM-Synthese mit den in diesem Kapitel besprochenen Veredelungen gezeigt. In den Plots sind die Ähnlichkeiten zum originalen Ton deutlich sichtbar.
 
 \begin{figure} [h!t!b!]
 \centering
@@ -134,7 +134,7 @@ Zu Beginn dieser Arbeit wurde zum besseren Verständnis der FM-Synthese ein klei
 
 Zunächst wurde eine einfache FM-Synthesizer Klasse geschrieben und diese an das Audio Ausgabesystem des JUCE Frameworks angebunden. Dabei ruft die Soundkarte eine Methode des Programms auf und erwartet, dass der übergebene Puffer mit Audiodaten gefüllt wird. Das Programm füllt den gegebenen Puffer mit Daten, die mit der FM-Synthesizer Klasse generiert wurden. Später wurde das Programm dann noch um die visuelle Darstellung des erzeugten Audiosignals erweitert. Außerdem ist es möglich, dem FM-Synthesizer einen Hüllkurvengenerator zu übergeben, welcher bei der Erzeugung des Audiosignals den Amplitudenwert für die einzelnen Samples bereitstellt. Die Amplitudenwerte werden ebenfalls visuell dargestellt.
 
-Da gerade die Änderung der Parameter und das jeweils resultierende Klangbild zum Verständnis hilfreich sind, wurden Möglichkeiten in das Programm eingebaut, um sowohl den Modulationsindex als auch die Modulationsfrequenz sowie die Oktave zu ändern. Das Ändern der Parameter ist mittels einfachem Tastendruck möglich. Zusätzlich wurde das Programm so angepasst, dass es ermöglicht wird, verschiedene Tonhöhen zu spielen. Die Tasten "'C"', "'D"', "'E"', "'F"', "'G"', "'A"' und "'B"' entsprechen dabei jeweils ihrem tonalem Äquivalent. Beim Drücken der Taste startet die Hüllkurve in die Attack Phase, geht dann über in die Decay und schließlich in die Sustain Phase. Wird die Taste losgelassen, startet die Release Phase und der Ton klingt ab. Mit den Tasten "'1"' und "'2"' kann der Modulationsindex inkrementiert sowie dekrementiert werden. Um die Modulationsfrequenz zu ändern, können die Pfeil hoch und Pfeil runter Tasten genutzt werden. Die Octave lässt sich mit den Tasten "'+"' und "'-"' verändern.
+Da gerade die Änderung der Parameter und das jeweils resultierende Klangbild zum Verständnis hilfreich sind, wurden Möglichkeiten in das Programm implementiert, um sowohl den Modulationsindex als auch die Modulationsfrequenz sowie die Oktave zu ändern. Das Ändern der Parameter ist mittels einfachem Tastendruck möglich. Zusätzlich wurde das Programm so angepasst, dass es ermöglicht wird, verschiedene Tonhöhen zu spielen. Die Tasten "'C"', "'D"', "'E"', "'F"', "'G"', "'A"' und "'B"' entsprechen dabei jeweils ihrem tonalem Äquivalent. Beim Drücken der Taste startet die Hüllkurve in die Attack-Phase, geht dann über in die Decay- und schließlich in die Sustain-Phase. Wird die Taste losgelassen, startet die Release-Phase und der Ton klingt ab. Mit den Tasten "'1"' und "'2"' kann der Modulationsindex inkrementiert sowie dekrementiert werden. Um die Modulationsfrequenz zu ändern, können die Pfeil hoch und Pfeil runter Tasten genutzt werden. Die Octave lässt sich mit den Tasten "'+"' und "'-"' verändern.
 
 Das entstandene Programm bietet eine gute Möglichkeit, die Parameter der FM-Synthese während der Wiedergabe eines Tones zu verändern und hilft so zu verstehen was beim Ändern dieser passiert. Natürlich ist das entstandene Programm nicht so flexibel und mächtig wie beispielsweise das Programm FM8 von Native Instruments. Trotzdem bietet es einen einfachen Einstieg in die FM-Synthese und der für Parameter resultierenden Spektren und Klänge. Somit wurde das Ziel, das mit der Programmierung des Tools gesetzt wurde, erreicht.
 \FloatBarrier
