new headline & new end

--- a/Dok/Kapitel/Fazit.tex
+++ b/Dok/Kapitel/Fazit.tex
@@ -1,4 +1,4 @@
 \section{Fazit}
 
 Chownings Entdeckung führte zu einer Revolution des Synthesizer Marktes. Der DX7 von Yamaha war einer der erfolgreichsten Synthesizer und trug maßgeblich zu dieser Revolution bei. Obwohl die zugrundeliegende Formel simpel wirkt, sind die mathematischen Hintergründe nicht trivial. Durch komplexe Anordnung von Trägern und Modulatoren können beliebig komplexe Klänge erzeugt werden. Dies führt zu einer mächtigen, jedoch wenig intuitiven Technik. Musiker können durch Experimentieren verschiedener Parametern und Konfigurationen interessante Klänge erzeugen. Außerdem kann die FM-Synthese dazu verwendet werden, um ganze Instrumente nachzubilden.
-Diese Arbeit soll dem Leser die Technik der FM-Synthese näher bringen und die Hintergründe hinter einfacher und komplexer FM-Synthese anschaulich beschreiben.
+Wie in dieser Arbeit gezeigt wurde, ist dies bei sorgfältiger Ausnutzung der Eigenschaften von einfacher und komplexer FM-Synthese sowie unter Wahl der geeigneten Parametern mit einem gewissen Maß an Erfindungsreichtum sehr gut zu bewerkstelligen.
