--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -50,11 +50,22 @@
 \setcounter{secnumdepth}{4}
 
 \author{Julius Hackel, Markus Bullmann, Matthias Kemmer, Stefan Gerasch}
-\title{Gliederung Vertiefungsseminar MI}
+\title{FM-Synthese \\ Seminararbeit Medieninformatik}
 \begin{document}
 
 \maketitle
 \tableofcontents
+\newpage
+
+Folgende Abschnitte wurden von den entsprechenden Personen verfasst:
+\begin{tabbing}
+Julius Hackel:~~~~~~~~~ \= Kapitel 1 \glqq Einführung\grqq{}, sowie Kapitel 2.1 \glqq Grundlegende Erläuterungen\grqq \\
+Markus Bullmann:        \> Kapitel 2.2 \glqq Besonderheiten der FM-Synthese\grqq \\
+Matthias Kemmer:        \> Kapitel 3 \glqq Prinzipien der komplexen FM-Synthese\grqq \\
+Stefan Gerasch:         \> Kapitel 4 \glqq Praktische Anwendung der FM-Synthese\grqq \\
+\end{tabbing}
+
+\newpage
 
 \input{Kapitel/Einfuehrung.tex}
 
